@@ -127,14 +127,14 @@ PimImage = include             # Psana::Lusi::PimImageConfigV1
 Pimax = include                # Psana::Pimax::ConfigV1, Psana::Pimax::FrameV1
 Princeton = include            # Psana::Princeton::ConfigV1, Psana::Princeton::ConfigV2, Psana::Princeton::ConfigV3, Psana::Princeton::ConfigV4, Psana::Princeton::ConfigV5, Psana::Princeton::FrameV1, Psana::Princeton::FrameV2
 PrincetonInfo = include        # Psana::Princeton::InfoV1
-Quartz = include               # Psana::Quartz::ConfigV1
+Quartz = include               # Psana::Quartz::ConfigV1, Psana::Quartz::ConfigV2
 Rayonix = include              # Psana::Rayonix::ConfigV1, Psana::Rayonix::ConfigV2
 SharedAcqADC = include         # Psana::Bld::BldDataAcqADCV1
 SharedIpimb = include          # Psana::Bld::BldDataIpimbV0, Psana::Bld::BldDataIpimbV1
 SharedPim = include            # Psana::Bld::BldDataPimV1
 Spectrometer = include         # Psana::Bld::BldDataSpectrometerV0, Psana::Bld::BldDataSpectrometerV1
 TM6740 = include               # Psana::Pulnix::TM6740ConfigV1, Psana::Pulnix::TM6740ConfigV2
-TimeTool = include             # Psana::TimeTool::ConfigV1, Psana::TimeTool::DataV1
+TimeTool = include             # Psana::TimeTool::ConfigV1, Psana::TimeTool::ConfigV2, Psana::TimeTool::DataV1, Psana::TimeTool::DataV2
 Timepix = include              # Psana::Timepix::ConfigV1, Psana::Timepix::ConfigV2, Psana::Timepix::ConfigV3, Psana::Timepix::DataV1, Psana::Timepix::DataV2
 TwoDGaussian = include         # Psana::Camera::TwoDGaussianV1
 UsdUsb = include               # Psana::UsdUsb::ConfigV1, Psana::UsdUsb::DataV1
